--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".MenuActivity" />
-        <activity android:name=".Profile"
-
-            />
+        <activity android:name=".Profile" />
+        <activity
+            android:name=".Nav"
+            android:label="@string/title_activity_nav"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
